new folder dor api

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "marleyjs",
   "version": "0.9.3",
   "scripts": {
-    "api:start": "ts-node -r tsconfig-paths/register apps/api/src/main.ts",
+    "api:start": "ts-node -r tsconfig-paths/register ./api/src/main.ts",
     "api:start:dev": "nodemon",
-    "api:start:prod": "node apps/api/dist/server",
-    "api:start:hmr": "node apps/api/dist/server",
+    "api:start:prod": "node ./api/dist/server",
+    "api:start:hmr": "node ./api/dist/server",
     "api:test:cov": "jest --coverage",
-    "api:test:e2e": "jest --config ./apps/api/test/jest-e2e.json",
-    "api:build": "webpack --config apps/api/webpack.config.js",
+    "api:test:e2e": "jest --config ./api/test/jest-e2e.json",
+    "api:build": "webpack --config ./api/webpack.config.js",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
