--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "marleyjs",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "private": true,
+  "engines": {
+    "node": ">=8.11.2"
+  },
   "scripts": {
     "ng": "ng",
-    "build": "npm run prettier && npm run prettier:check && npm run lint && npm run env -s && ng build --prod",
-    "start": "npm run env -s && ng serve --aot",
-    "start:proxy": "npm run env -s && ng serve --aot --proxy-config proxy.conf.js",
-    "serve:sw": "npm run build -s && npx http-server ./dist -p 4200",
+    "build": "yarn prettier && yarn prettier:check && yarn lint && yarn env -s && ng build --prod",
+    "start": "yarn env -s && ng serve --aot",
+    "start:proxy": "yarn env -s && ng serve --aot --proxy-config proxy.conf.js",
+    "serve": "yarn env -s && ng serve",
+    "serve:sw": "yarn build -s && npx http-server ./dist -p 4200",
     "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\" --config .htmlhintrc",
-    "test": "npm run env -s && ng test",
-    "test:ci": "npm run env -s && npm run lint -s && ng test --code-coverage --watch=false",
-    "e2e": "npm run env -s && ng e2e",
+    "test": "yarn env -s && ng test",
+    "test:ci": "yarn env -s && yarn lint -s && ng test --code-coverage --watch=false",
+    "e2e": "yarn env -s && ng e2e",
     "translations:extract": "ngx-translate-extract --input ./src --output ./src/translations/template.json --format=json --clean -sort --marker extract",
     "docs": "hads ./docs -o",
     "env": "ngx-scripts env npm_package_version",
     "prettier": "prettier --write \"./{src,e2e}/**/*.{ts,js,scss}\"",
     "prettier:check": "prettier --list-different \"./{src,e2e}/**/*.{ts,js,scss}\"",
-    "postinstall": "npm run prettier -s",
+    "postinstall": "yarn prettier -s",
     "precommit": "pretty-quick --staged"
   },
   "dependencies": {
@@ -33,8 +37,8 @@
     "@ngx-translate/core": "^10.0.1",
     "@angular/service-worker": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^3.3.0",
-    "bootstrap": "^4.1.1",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+    "bootstrap": "^4.1.1",
     "core-js": "^2.5.6",
     "lodash": "^4.17.10",
     "rxjs": "^6.3.1",
